--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: LiXizhi's Personal Website
-email: lixizhi@yeah.net
-description: Xizhi's Ideas & Blogs
+title: ZhengYinloong's Personal Website
+email: zhengyinloong@126.com
+description: ZhengYinloong's Ideas & Blogs
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
@@ -9,8 +9,7 @@ description: Xizhi's Ideas & Blogs
 
 # baseurl: "" # the subpath of your site, e.g. /blog/
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
-# twitter_username: jekyllrb
-github_username: LiXizhi
+github_username: zhengyinloong
 permalink: /:year/:month/:day/:title/
 # this is the url root of the view source link on the footer page.
 viewsourceroot: https://github.com/LiXizhi/LiXizhi.github.io/blob/master/
