--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: ZhengYinloong's Personal Website
 email: zhengyinloong@126.com
-description: ZhengYinloong's Ideas & Blogs
+description: ZhengYinloong's Notes & Blogs
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
