--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ZhengYinloong's Personal Website
+title: ZhengYinloong's Blog Site
 email: zhengyinloong@126.com
 description: ZhengYinloong's Notes & Blogs
 # > # this means to ignore newlines until "baseurl:"
